--- a/semaine03/cinetim/ressources/css/styles.css
+++ b/semaine03/cinetim/ressources/css/styles.css
@@ -48,7 +48,9 @@ nav {
     position: relative;
     padding: 3rem 1.5rem;
     color: white;
-    background: linear-gradient(45deg, #0f172a, #5680c4);
+    background: 
+        linear-gradient(45deg, rgba(4, 38, 77, 0.7) 30%, rgba(14, 14, 150, 0.5) 50%, rgba(14, 14, 150, 0.2) 70%),
+        url(../images/films/frankenstein.png) center right / cover no-repeat;
     
     h1 {
         margin: 0.25rem 0 1rem;
@@ -86,6 +88,10 @@ nav {
 
 }
 
+section.vedette {
+    margin: 1.5rem;
+}
+
 .grille {
     display: flex;
     flex-direction: column;
@@ -96,22 +102,49 @@ nav {
 .tuile {
     flex: 1 1 0;
     background-color: #fff;
-    padding: 1rem;
+    /* padding: 1rem; */
     border-radius: 12px;
     min-height: 300px;
+    max-height: 300px;
     transition: translate 0.3s;
     position: relative;
     overflow: hidden;
 
+    figure {
+        margin: 0;
+        padding: 0;
+        img {
+            width: 100%;
+            object-fit: cover;
+        }
+
+        figcaption {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            height: 60px;
+            background-color: black;
+            color: white;
+            display: flex;
+            align-items: center;
+            /* line-height: 60px; */
+            padding: 0 1rem;
+            font-variant: small-caps;
+            font-size: 1.5rem;
+        }
+    }
+
+    /* Seulement dans la page films.html */
     .description {
         position: absolute;
-        /* top: 0; */
-        bottom: 0;
+        top: 0;
         left: 0;
         right: 0;
         padding: 1rem;
-        translate: 0 100%;
+        translate: 0 -100%;
         transition: translate 300ms;
+        background-color: rgba(4, 38, 77, 0.7);
+        color: #fff;
     }
 
     &:hover {
