--- a/semaine04/cinetim/ressources/css/styles.css
+++ b/semaine04/cinetim/ressources/css/styles.css
@@ -97,6 +97,12 @@ section.vedette {
     flex-direction: column;
     gap: 1.5rem;
     padding: 2rem 1rem;
+
+    &.d2 {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+        gap: 1.5rem;
+    }
 }
 
 .tuile {
